feat: configuracao para railways

--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -12,4 +12,13 @@ log_dest file /mosquitto/log/mosquitto.log
 log_dest stdout
 
 # Configurações de segurança básicas
-allow_anonymous true 
+allow_anonymous true
+
+# Configurações adicionais para Railway
+max_connections -1
+max_queued_messages -1
+max_packet_size 0
+max_inflight_messages 20
+retry_interval 20
+connection_messages true
+log_type all 
