--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,17 @@ services:
     image: eclipse-mosquitto:latest
     container_name: mosquitto
     ports:
-      - "1883:1883"  # MQTT default port
-      - "9001:9001"  # WebSocket port
+      - "${PORT:-1883}:1883"  # Railway fornece a variável PORT
+      - "${WS_PORT:-9001}:9001"  # Porta WebSocket
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/log:/mosquitto/log
-    restart: unless-stopped 
+    environment:
+      - TZ=UTC
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mosquitto_sub", "-t", "$$SYS/#", "-C", "1", "-W", "1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3 
