--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,10 @@ services:
     image: eclipse-mosquitto:latest
     container_name: mosquitto
     ports:
-      - "${PORT:-1883}:1883"  # Railway fornece a variável PORT
-      - "${WS_PORT:-9001}:9001"  # Porta WebSocket
+      - "${PORT:-1883}:1883"
+      - "${WS_PORT:-9001}:9001"
     volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
     environment:
       - TZ=UTC
     restart: unless-stopped
