feat: configuracao para railways modificação do max packet size

--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -12,7 +12,7 @@ allow_anonymous true
 # Configurações adicionais para Railway
 max_connections -1
 max_queued_messages -1
-max_packet_size 0
+max_packet_size 268435455  # Valor máximo permitido (256MB)
 max_inflight_messages 20
 retry_interval 20
 connection_messages true
